--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,12 @@
     "@types/node": "12.0.1",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.0.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "typescript": "3.4.5"
   },
   "scripts": {
