--- a/app-hook/package.json
+++ b/app-hook/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-model": "^2.7.1",
     "react-scripts": "3.0.1",
     "typescript": "3.4.5"
   },
